--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.uploadcare</groupId>
+            <artifactId>uploadcare</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
